<resources>
    <string name="app_name">GamesRedo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="today_s_games">Today\'s Games</string>
    <string name="hometeam">HomeTeam</string>
    <string name="awayteam">awayTeam</string>
    <string name="away_team">Away Team</string>
    <string name="at">at</string>
    <string name="home_team">Home Team</string>
    <string name="venue">venue</string>
    <string name="date">date</string>
    <string name="abstractgamestate">abstractGameState</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="standings">Standings</string>
    <string name="division">division</string>
    <string name="homeWinProb">Home Team Win Probability</string>
    <string name="awayTeamWinPercent">Away Team Win Probability</string>
    <string name="gameDetail">Game Detail</string>
    <string name="leaders">Leaders</string>
    <string name="teamDetail">Team Detail</string>
    <string name="playerDetail">Player Detail</string>
    <string name="teamInfo">Team Info</string>
</resources>